manifests/05-demo-apps/quarkus/base/quarkus-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkus-app
    app.kubernetes.io/component: quarkus-app
    app.kubernetes.io/instance: quarkus-app
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/part-of: quarkus-app
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-namespace: quarkus-demo
  name: quarkus-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: quarkus-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quarkus-app
        deploymentconfig: quarkus-app
    spec:
      containers:
      - image: quay.io/pittar/quarkus-prometheus:latest
        imagePullPolicy: Always
        name: quarkus-app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
