manifests/05-demo-apps/quarkus/base/quarkus-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-app
    app.kubernetes.io/component: quarkus-app
    app.kubernetes.io/instance: quarkus-app
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/part-of: quarkus-app
    prometheus-metrics: "true"
  name: quarkus-app
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    app: quarkus-app
    deploymentconfig: quarkus-app
