manifests/05-demo-apps/quarkus/base/quarkus-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-app
    app.kubernetes.io/component: quarkus-app
    app.kubernetes.io/instance: quarkus-app
    app.kubernetes.io/name: quarkus-app
    app.kubernetes.io/part-of: quarkus-app
  name: quarkus-app
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: quarkus-app
    weight: 100
  wildcardPolicy: None
